# tsui

./: .mise.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  bacon.toml  flake.nix  manifest
.beads/: config.yaml
.kinora/: config.styx  rung0-hints.md
.kinora/roots/: commits  rules
